--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,7 +17,7 @@
             <p:menuitem value="Bus" icon="pi pi-user" action="buses"/>
             <p:menuitem value="Lignes" icon="pi pi-home" action="lines"/>
             <p:menuitem value="Arrêts" icon="pi pi-user" action="stops"/>
-            <p:menuitem value="Stops" icon="pi pi-user" action="stops"/>
+            <p:menuitem value="Créneux" icon="pi pi-user" action="slots"/>
             <p:menuitem value="API" icon="pi pi-user" action="api"/>
         </p:menubar>
     </h:form>
