--- a/src/main/webapp/stops.xhtml
+++ b/src/main/webapp/stops.xhtml
@@ -26,7 +26,7 @@
 
     <p:panel id="basic" header="Bus stop list" style="margin-bottom:20px">
         <ui:repeat value="#{stopController.getList()}" var="value">
-            #{value.getId()}: #{value.getName()} <br />
+            #{value.getId()}: #{value.getName()} <p:commandButton value="Delete" action="#{stopController.delete(value.getId())}" /> <br />
         </ui:repeat>
     </p:panel>
 
@@ -38,7 +38,7 @@
             <p:inputText id="name" value="#{stopController.name}"/>
 
             <f:facet name="footer">
-                <p:commandButton value="Add" action="#{stopController.formCreate()}" render="stops"/>
+                <p:commandButton value="Add" action="#{stopController.formCreate()}"/>
             </f:facet>
         </p:panelGrid>
     </h:form>
