--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -11,7 +11,7 @@
 
     <h:form>
         <p:menubar>
-            <p:menuitem value="/api/users" icon="pi pi-home" action="/api/users"/>
+            <p:menuitem value="/api/users" icon="pi pi-home" url="/api/users"/>
             <p:menuitem value="users" icon="pi pi-user" action="users"/>
         </p:menubar>
     </h:form>
