--- a/src/main/webapp/api.xhtml
+++ b/src/main/webapp/api.xhtml
@@ -5,7 +5,7 @@
 <h:head>
     <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
     <h:outputStylesheet name="buscompany.css" library="buscompanystyles"/>
-    <title>Webapp Seed</title>
+    <title>Bus Company</title>
 </h:head>
 
 <h:body>
