--- a/src/main/webapp/updatestops.xhtml
+++ b/src/main/webapp/updatestops.xhtml
@@ -5,7 +5,7 @@
 
 <h:head>
     <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
-    <title>Webapp Seed</title>
+    <title>Bus Company</title>
 </h:head>
 
 <h:body>
@@ -23,25 +23,24 @@
         </p:menubar>
     </h:form>
 
-    <h:dataTable value="#{stopController.getList()}" var="o"
-                 styleClass="order-table"
-                 headerClass="order-table-header"
-                 rowClasses="order-table-odd-row,order-table-even-row"
-    >
-        <h:form id="addStop">
-            <p:panelGrid columns="2">
-                <f:facet name="header">Add new stop:</f:facet>
 
-                <h:outputText value="Name:"/>
-                <p:inputText id="name" value="#{stopController.name}"/>
+    <f:metadata>
+        <f:viewParam name="id" value="#{stopController.id}"/>
+        <f:viewParam name="name" value="#{stopController.name}"/>
+    </f:metadata>
 
-                <f:facet name="footer">
-                    <p:commandButton value="Update" action="#{stopController.formCreate()}"/>
-                </f:facet>
-            </p:panelGrid>
-        </h:form>
+    <h:form id="addStop">
+        <p:panelGrid columns="2">
+            <f:facet name="header">Modify #{id}</f:facet>
 
-    </h:dataTable>
+            <h:outputText value="Name:"/>
+            <p:inputText id="name" value="#{stopController.name}"/>
+
+            <f:facet name="footer">
+                <p:commandButton value="Update" action="#{stopController.formUpdate()}"/>
+            </f:facet>
+        </p:panelGrid>
+    </h:form>
 
 
 </h:body>
