--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -4,7 +4,7 @@
 
 <h:head>
     <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
-    <title>Webapp Seed</title>
+    <title>Bus Company</title>
 </h:head>
 
 <h:body>
