Finished Stop updates

--- a/src/main/webapp/slots.xhtml
+++ b/src/main/webapp/slots.xhtml
@@ -27,9 +27,13 @@
         <p:panelGrid columns="2">
             <f:facet name="header">Add new slot:</f:facet>
 
-            <h:outputText value="Name:"/>
-            <p:inputText id="name" value="#{slotController.name}"/>
+            <h:outputText value="Date:"/>
+            <p:inputText id="name" value="#{slotController.date}"/>
 
+            <p:selectOneMenu id="line" value="#{lineController.getList()}" style="width:150px">
+                <f:selectItem itemLabel="Select Line" itemValue=""/>
+                <f:selectItems value="#{lineController.getList()}"/>
+            </p:selectOneMenu>
             <f:facet name="footer">
                 <p:commandButton value="Add" action="#{stopController.formCreate()}" icon="pi pi-plus-circle"/>
             </f:facet>
